--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -25,6 +25,31 @@ header #cities {
   width: 100%;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 32vw;
+  border: red dotted 2px;
+}
+
+main section:first-child {
+  border: white solid 1px;
+}
+
+main section:nth-child(2) {
+  border: pink solid 1px;
+}
+
+main section:nth-child(3) {
+  border: orange solid 1px;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 ul li a {
   color: white;
 }
