Adding images and styling layout

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -31,28 +31,16 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-top: 8vh;
     padding-left: 32vw;
-    border: red dotted 2px;
-}
-
-main section:first-child {
-    border: white solid 1px;
-}
-
-main section:nth-child(2) {
-    border: pink solid 1px;
-}
-
-main section:nth-child(3) {
-    border: orange solid 1px;
+        a {
+            color: white;
+        }
 }
 // Contact links
 ul {
     list-style-type: none;
     padding-left: 0;
-}
-ul li a{
-    color: white;
 }
 #website:before {
     font-family: "FontAwesome";
@@ -73,4 +61,17 @@ ul li a{
     font-family: "FontAwesome";
     content: "\f09c";
     margin-right: 7px;
+}
+// Pictures
+#camera {
+    width: 15%;
+    position: absolute;
+    bottom: 30vh;
+    left: 10vw;
+}
+#turntable {
+    width: 25%;
+    position: absolute;
+    bottom: 4vh;
+    left: 66vw;
 }
