--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -75,3 +75,20 @@ ul {
     bottom: 4vh;
     left: 66vw;
 }
+// Media query
+@media only screen and (max-width: 600px) {
+    // Header
+    #cities {
+        flex-direction: column;
+        align-items: flex-end;
+        margin-right: 5vw;
+    }
+    // Main
+    main {
+        padding-left: 0;
+    }
+    // Pictures
+    #camera, #turntable {
+        display: none;
+    }
+}
