--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -79,4 +79,20 @@ ul {
   left: 66vw;
 }
 
+@media only screen and (max-width: 600px) {
+  #cities {
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 5vw;
+  }
+
+  main {
+    padding-left: 0;
+  }
+
+  #camera, #turntable {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=about.css.map */
