--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,10 +10,7 @@ body img {
   transform: rotate(17deg);
 }
 body img:hover {
-  width: 25%;
-  position: absolute;
-  left: 64vw;
-  top: 7vh;
+  transform: scale(1.2) rotate(17deg);
 }
 
 /*# sourceMappingURL=main.css.map */
