--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -41,28 +41,49 @@ ul {
   padding-left: 0;
 }
 
-#website:before {
-  font-family: "FontAwesome";
-  content: "\f0ac";
-  margin-right: 7px;
+a {
+  background-color: red;
+  font-weight: 900;
+  text-decoration: none;
+  width: 5rem;
 }
 
-#email:before {
-  font-family: "FontAwesome";
-  content: "\f0e0";
-  margin-right: 7px;
+#dci {
+  transform: rotate(-7deg);
+  position: absolute;
+  left: 49vw;
+  bottom: 43vh;
+}
+#dci:hover {
+  transform: scale(2) rotate(-7deg);
 }
 
-#github:before {
-  font-family: "FontAwesome";
-  content: "\f09b";
-  margin-right: 7px;
+#website {
+  transform: rotate(10deg);
+}
+#website:hover {
+  transform: scale(2) rotate(10deg);
 }
 
-#linkedin:before {
-  font-family: "FontAwesome";
-  content: "\f09c";
-  margin-right: 7px;
+#email {
+  transform: rotate(-7deg);
+}
+#email:hover {
+  transform: scale(2) rotate(-7deg);
+}
+
+#github {
+  transform: rotate(7deg);
+}
+#github:hover {
+  transform: scale(2) rotate(7deg);
+}
+
+#linkedin {
+  transform: rotate(-10deg);
+}
+#linkedin:hover {
+  transform: scale(2) rotate(-10deg);
 }
 
 #camera {
